--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <span class="concept">Freshtonic_Boyz</span>
             </div>
             <div class="image-area">
-                <img src="IMAGES/BAFANA BA STYLE.jpg" alt="Freshtonic_Boyz DJs">
+                <img src="BAFANA BA STYLE.jpg" alt="Freshtonic_Boyz DJs">
             </div>
             <div class="details-area">
                 <p class="description">
@@ -52,7 +52,7 @@
 
     <section class="gif-animation">
         <div class="gif-container">
-            <img src="IMAGES/Black and White Simple Typographic Phantom Halloween Logo.gif" alt="Animated GIF">
+            <img src="Black and White Simple Typographic Phantom Halloween Logo.gif" alt="Animated GIF">
         </div>
     </section>
 
@@ -73,7 +73,7 @@
                 <h3>The Team</h3>
                 <div class="member">
                     <div class="image-wrapper">
-                        <img src="IMAGES/Once you clock consistency you tap into an elite level..  - @kamiliphotographyDressed by- @official_styledaily.jpg" alt="Mothibedi">
+                        <img src="Once you clock consistency you tap into an elite level..  - @kamiliphotographyDressed by- @official_styledaily.jpg" alt="Mothibedi">
                         <div class="music-animation"></div>
                     </div>
                     <h4>Mothibedi</h4>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="member">
                     <div class="image-wrapper">
-                        <img src="IMAGES/“Herl” @freshtonic_boyz   - @kamiliproduction   - @thirstywear_worldwide.jpg" alt="Thapelo">
+                        <img src="“Herl” @freshtonic_boyz   - @kamiliproduction   - @thirstywear_worldwide.jpg" alt="Thapelo">
                         <div class="music-animation"></div>
                     </div>
                     <h4>Thapelo (Skwidiano)</h4>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="member">
                     <div class="image-wrapper">
-                        <img src="IMAGES/11-08 Thank you God for another year! +1.jpg" alt="BINOBOY">
+                        <img src="11-08 Thank you God for another year! +1.jpg" alt="BINOBOY">
                         <div class="music-animation"></div>
                     </div>
                     <h4>BINOBOY</h4>
@@ -106,19 +106,19 @@
               <ul>
                   <li>
                       <a href="https://youtube.com/channel/UC1ir06X7mx7Anm6jyZ-xeiQ?si=j2E-UmGd2fyoYZDH" target="_blank" rel="noopener noreferrer">
-                          <img src="IMAGES/YOUTUBE.svg" alt="Listen on YouTube" width="40" height="40">
+                          <img src="YOUTUBE.svg" alt="Listen on YouTube" width="40" height="40">
                           <span>YouTube</span>
                       </a>
                   </li>
                   <li>
                       <a href="https://open.spotify.com/artist/6s92E7uyyYnEHgRbipFeet?si=gkhC85g8T_-gIpYaZgFNCQ" target="_blank" rel="noopener noreferrer">
-                          <img src="IMAGES/icons8-spotify.svg" alt="Listen on Spotify" width="40" height="40">
+                          <img src="icons8-spotify.svg" alt="Listen on Spotify" width="40" height="40">
                           <span>Spotify</span>
                       </a>
                   </li>
                   <li>
                       <a href="https://music.apple.com/za/artist/freshtonic-boyz/1584254485" target="_blank" rel="noopener noreferrer">
-                          <img src="IMAGES/icons8-apple-music.svg" alt="Listen on Apple Music" width="40" height="40">
+                          <img src="icons8-apple-music.svg" alt="Listen on Apple Music" width="40" height="40">
                           <span>Apple Music</span>
                       </a>
                   </li>
@@ -137,7 +137,7 @@
         <h2>Upcoming Events</h2>
         <div class="social-links">
             <a href="https://www.instagram.com/freshtonic_boyz?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer">
-              <img src="IMAGES/icons8-instagram.svg" alt="Listen on Apple Music" width="40" height="40">
+              <img src="icons8-instagram.svg" alt="Check on Instagram" width="40" height="40">
             </a>
         </div>
     </section>
@@ -147,20 +147,20 @@
       <h2>SPAAN</h2>
       <div class="gallery-grid">
           <div class="gallery-item">
-              <img src="IMAGES/Thank you @vibesonmain for having us. Till next time   - @snvps_official.jpg" alt="Kendrick Lamar - GNX Album Cover" class="tilted-card-img">
+              <img src="Thank you @vibesonmain for having us. Till next time   - @snvps_official.jpg" alt="FreshTonic_Boyz" class="tilted-card-img">
           </div>
           <div class="gallery-item">
-              <img src="IMAGES/SPAAN.jpg" alt="Event 2" class="tilted-card-img">
+              <img src="SPAAN.jpg" alt="Event 2" class="tilted-card-img">
           </div>
           </div>
   </div>
   <div class="gallery-content">
     <div class="gallery-grid">
         <div class="gallery-item">
-            <img src="IMAGES/Bafana ba Peke   - @snvps_official (1).jpg" alt="Kendrick Lamar - GNX Album Cover" class="tilted-card-img">
+            <img src="Bafana ba Peke   - @snvps_official (1).jpg" alt="FreshTonic_Boyz" class="tilted-card-img">
         </div>
         <div class="gallery-item">
-            <img src="IMAGES/Bafana ba Peke   - @snvps_official2.jpg" alt="Event 2" class="tilted-card-img">
+            <img src="Bafana ba Peke   - @snvps_official2.jpg" alt="Event 2" class="tilted-card-img">
         </div>
         </div>
   </div>
@@ -179,8 +179,8 @@
                 </div>
             </div>
             <div class="social-links">
-                <a href="https://www.instagram.com/freshtonic_boyz?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="IMAGES/icons8-instagram.svg" alt="" width="40" height="40"></a>
-                <a href="https://www.tiktok.com/@freshtonic_boyz2?is_from_webapp=1&sender_device=pc"><img src="IMAGES/icons8-tiktok.svg" alt="" width="40" height="40">
+                <a href="https://www.instagram.com/freshtonic_boyz?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="icons8-instagram.svg" alt="" width="40" height="40"></a>
+                <a href="https://www.tiktok.com/@freshtonic_boyz2?is_from_webapp=1&sender_device=pc"><img src="icons8-tiktok.svg" alt="" width="40" height="40">
             </div>
             <div class="conmpany-links">
                 <a href="https://www.instagram.com/h.e.w.s?igsh=MWgyeHdnNW00eWg0dA==">Created By H.E.W.S  </a>
